# JenkinsSandbox

./: Jenkinsfile
FirstGTest/: CMakeLists.txt  VeryImportantClassTest.cpp  _Build_VS2017_Win64_NMake.bat  _Build_VS2017_Win64_Ninja.bat  _Cleanup.bat  _RunTests.bat  main.cpp
doc/: Refs.txt  TestUebersicht.odg
doc/JenkinsSandbox_Job/: config.xml
